backend/k8s/cybersecurity-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cybersec
